--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
 	 </p>
 	 </p>
 	<p class="newbottext">
-	Feel free to e-mail me with thoughts, feedback, anything at TheNovimatrem@protonmail.ch<br>we're so back
+	Feel free to e-mail me with thoughts, feedback, anything at TheNovimatrem@protonmail.ch<br>we're so back!
 		 </p><br><hr>
 		                         <!-- ... -->
       <!-- this is a link object -->
