attempt to fix crash

--- a/bookmarks/iframe.html
+++ b/bookmarks/iframe.html
@@ -15,6 +15,12 @@
   left: 6643px;
   z-index: 3316777271;
 }
+*, *::after, *::before {
+	-webkit-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-app-region: no-drag;
+	cursor: default;
+}
 </style>
         <meta charset="UTF-8">
  <!-- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"> -->
