--- a/bookmarks/iframe.html
+++ b/bookmarks/iframe.html
@@ -1271,6 +1271,15 @@ outline:white;
 
 
 
+<a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; noorangered; color:white" href="https://docs.google.com/" target="_blank">gDocs</a>&nbsp;<span style="color:white">|</span>
+
+
+
+<a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; noorangered; color:white" href="https://old.reddit.com/" target="_blank">Reddit</a>&nbsp;<span style="color:white">|</span>
+
+
+
+
 
 
 
