--- a/bookmarks/iframe.html
+++ b/bookmarks/iframe.html
@@ -1267,15 +1267,6 @@ outline:white;
 
         <!-- \~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~/ -->
 
-            <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; noorangered; color:white" href="https://www.pinterest.co.uk/" target="_blank">Pinterest</a>&nbsp;<span style="color:white">|</span>
-
-
-
-<a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; noorangered; color:white" href="https://docs.google.com/" target="_blank">gDocs</a>&nbsp;<span style="color:white">|</span>
-
-
-
-<a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; noorangered; color:white" href="https://old.reddit.com/" target="_blank">Reddit</a>&nbsp;<span style="color:white">|</span>
 
 
 
@@ -1397,7 +1388,20 @@ outline:white;
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:darkseagreen; vertical-align:middle;" href="https://novimatrem.uk/pinterest" target="_blank">Pinterest</a> 
 
 
+
+
+<a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; noorangered; color:white" href="https://docs.google.com/" target="_blank">gDocs</a>&nbsp;<span style="color:white"></span>
+
+
+
+<a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; noorangered; color:white" href="https://old.reddit.com/" target="_blank">Reddit</a>&nbsp;<span style="color:white"></span>
+
+
+
+
+
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://novimatrem.uk/repos" target="_blank">GitLab</a>
+
 
 
                                                                                                                                                                                                  
