--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -31,9 +31,15 @@
             position:absolute;
             top:0px;
             left:0px;
-            width:1400px;
-            height:1000px;
+            width:1110px;
+            height:590px;
 			color:black;
+  	    background-image: url("background-new.jpg");
+background-size: cover;
+     background-repeat: repeat;
+     background-size: 100% 100%;
+background-attachment: fixed;
+background-color:transparent;
         }
           
         iframe {
@@ -96,7 +102,7 @@ background-image: url("background-allower.png");
             marginheight="0" 
             marginwidth="0" 
             width="1400px" 
-            height="1000px" 
+            height="7000px" 
             scrolling="no" 
             style="overflow:hidden; overflow-x:hidden, overflow-y: hidden;" 
             seamless="seamless"
