--- a/osrs-stats/index.html
+++ b/osrs-stats/index.html
@@ -117,65 +117,48 @@
          }
       </script>
    </head>
-   <body style="background: transparent; background-color:transparent; background-size: cover; text-align: left; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-blend-mode: overlay; background-position: center; background-repeat: no-repeat; background: url(https://novimatrem.uk/assets/background.jpg) no-repeat center center fixed;">
+   <body style="background: transparent; background-color:transparent; background-size: cover; text-align: left; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-blend-mode: overlay; background-position: center; background-repeat: no-repeat; background: url(https://novimatrem.uk/osrs-stats/blurmapscape.png) no-repeat center center fixed; background-color: #483e33">
       <p class="versionnum"></p>
       <!-- Thank you simonwhitaker for this fork ribbon -->
-      <a class="github-fork-ribbon left-top" href="https://gitlab.com/users/Novimatrem/projects" target="_blank" data-ribbon="Fork me on GitLab" alt="Fork me on GitLab" title="Fork me on GitLab">Fork me on GitLab</a>
-      <div class="holdernyaihavedonenothingwrongONE">
+      <div class="holdernyaihavedonenothingwrongONE" style="background-color: #483e33; border: 2px solid black;">
       <div class="badgesholder">
          <div class="badge">
-            <a target="_blank" href="https://www.kernel.org/linux.html">
-            <img class="badge" src="../assets/images/badge/badge-linux.png" alt="Linux rocks! User since Mid-2015" title="Linux rocks! User since Mid-2015">
             </a>
          </div>
       </div>
       <div class="badgesholder">
          <div class="badge">
-            <a target="_blank" href="https://www.urbandictionary.com/define.php?term=trans%2A">
-            <img class="badge" src="../assets/images/badge/badge-trans.png" alt="Trans pride! - out & proud since May 1st 2016" title="Trans pride! - out & proud since May 1st 2016">
             </a>
          </div>
       </div>
       <div class="badgesholder">
          <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/Pansexuality">
-            <img class="badge" src="../assets/images/badge/badge-pan.png" alt="Pansexual pride!" title="Pansexual pride!">
             </a>
          </div>
       </div>
       <div class="badgesholder">
          <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/Polyamory">
-            <img class="badge" src="../assets/images/badge/badge-poly.png" alt="Polyamory pride!" title="Polyamory pride!">
             </a>
          </div>
       </div>
       <div class="badgesholder">
          <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/Trans_woman">
-            <img class="badge" src="../assets/images/badge/badge-transwoman.png" alt="Trans girl ♀ - out & proud since May 1st 2016" title="Trans girl ♀ - out & proud since May 1st 2016">
             </a>
          </div>
       </div>
       <div class="badgesholder">
          <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/LGBTQIA+">
-            <img class="badge" src="../assets/images/badge/badge-lgbtqia_plus.png" alt="LGBTQIA+ pride!" title="LGBTQIA+ pride!">
             </a>
          </div>
       </div>
       <div class="badgesholder">
          <div class="badge">
-            <a target="_blank" href="https://www.dictionary.com/browse/pacifist">
-            <img class="badge" src="../assets/images/badge/badge-peaceful_pacifist.png" alt="Peaceful pacifist" title="Peaceful pacifist">
             </a>
          </div>
       </div>
       <!-- navigation -->
       <div class="nav">
-         <a class="navitem" href="https://novimatrem.uk">Home</a>
-         <a class="navitem" href="https://novimatrem.uk/blog">&nbsp;Blog&nbsp;</a>
-         <a class="navitem" href="https://novimatrem.uk/about">&nbsp;About me&nbsp;</a>
+         <a class="navitem" href="https://novimatrem.uk" style="color:#ffff00">Home</a>
       </div>
       <!-- /navigation -->
       <div class="noviheart">
@@ -191,7 +174,7 @@
          <br><p></p>
          <p>
          -<br>
-         LAST UPDATED: Jan 9th 2024 <sup><sub>(been a while? ask me to update this page either in-game or at TheNovimatrem@protonmail.ch)
+         LAST UPDATED: Oct 29th 2024 <sup><sub>(been a while? ask me to update this page either in-game or at TheNovimatrem@protonmail.ch)
          </sub></sup><br>-
          </p>
          <br><p></p>
@@ -249,14 +232,14 @@
 			<br><br>
                <p style="margin-top:32px;">Page requires JavaScript, sorry-- <sub><sup><b>it should be accessible, works in a lot of (even text-mode) browsers.</b></sub></sup><br>
                   Design somewhat inspired by 
-                  <a href="https://web.archive.org/web/20210509043827/http://thebestmotherfucking.website/" class="footer" target="_blank">thebestmother<i class="censor">fuck</i>ing.website</a>
-                  and <a href="https://yukiisbo.red/" class="footer" target="_blank">yukiisbo.red</a> -- thanks!
+                  <a href="https://web.archive.org/web/20210509043827/http://thebestmotherfucking.website/" style="color:#ffff00" class="footer" target="_blank">thebestmother<i class="censor">fuck</i>ing.website</a>
+                  and <a href="https://yukiisbo.red/" style="color:#ffff00" class="footer" target="_blank">yukiisbo.red</a> -- thanks!
                   <br><span class="copy">&copy;</span> <span id="year"></span> Novimatrem, 
-                  <a href="https://gitlab.com/novimatrem/novimatrem.gitlab.io/" target="_blank">
+                  <a href="https://gitlab.com/novimatrem/novimatrem.gitlab.io/" style="color:#ffff00" target="_blank">
                   open-sourced w/ the GPLv3 on GitLab</a>.<br>
                   <sub>
                   All product names, logos, and brands are property of their respective owners.<br>
-                  Photo by <a href="https://unsplash.com/@matski?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Mat Ranson</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+                  Photo by <a href="https://unsplash.com/@matski?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" style="color:#ffff00">Mat Ranson</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" style="color:#ffff00">Unsplash</a><br><hr>
                   </sub>
                </p>
             </div>
