--- a/index.html
+++ b/index.html
@@ -399,6 +399,15 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
 	<p class="newbottext">
 	Feel free to e-mail me with thoughts, feedback, anything at TheNovimatrem@protonmail.ch<br>we're so back!
 		 </p><br><hr>
+
+        <!-- this is a link object -->
+      <div class="novinewpleaseleavemealonelinkTWO" style="float:left; text-decoration:none; text-decoration-color:transparent;">
+         <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/osrs-stats" target="_blank" style="text-decoration:none; text-decoration-color:transparent;">
+         <sup><sub><b style="font-weight:500; letter-spacing:-0px; font-size:15px; color: #ffff00; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent; font-family:monospace; letter-spacing:-1px; opacity:1.0;">(<u style="text-decoration:underline;">OSRS Stats</u>)</b></sub></sup>
+         </a>
+      </div>
+      <br>
+      <!-- /this was a link object -->
 		                         <!-- ... -->
       <!-- this is a link object -->
       <div class="novinewpleaseleavemealonelinkTWO" style="float:right; text-decoration:none; text-decoration-color:transparent;">
