--- a/osrs-stats/index.html
+++ b/osrs-stats/index.html
@@ -117,7 +117,7 @@
          }
       </script>
    </head>
-   <body style="background: transparent; background-color:transparent; background-size: cover; text-align: left; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-blend-mode: overlay; background-position: center; background-repeat: no-repeat; background: url(https://novimatrem.uk/osrs-stats/blurmapscape.png) no-repeat center center fixed; background-color: #483e33">
+   <body style="background: transparent; background-color:transparent; background-size: cover; text-align: left; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-blend-mode: overlay; background-position: center; background-repeat: no-repeat; background-size: cover; background-size: 100%; width:100%; height:100%; background: url(https://novimatrem.uk/osrs-stats/blurmapscape.png) no-repeat; background-size: 100% 273%; background-color: #483e33; backdrop-filter: blur(200px); padding:0px; margin:0px; margin-top:-128px; padding-bottom:37%; image-rendering:pixelated;  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7); rgb(96, 96, 96); background-blend-mode: darken;">
       <p class="versionnum"></p>
       <!-- Thank you simonwhitaker for this fork ribbon -->
       <div class="holdernyaihavedonenothingwrongONE" style="background-color: #483e33; border: 2px solid black;">
@@ -163,16 +163,16 @@
       <!-- /navigation -->
       <div class="noviheart">
       </div>
-      <h2 class="mainboldtext">
+      <h2 class="mainboldtext" style="font-family:monospace; letter-spacing:-1px; opacity:1.0;">
          My Old School Runescape stats
       </h2>
-      <p style="line-height:21px;">
+      <p style="line-height:21px; font-family:monospace; letter-spacing:-1px; opacity:1.0;">
          Because there wasn't any easier way to do this. Trust me, I tried. Thanks Jagex.<br>
          Here are my stats on OSRS, my username is Novimatrem, and I frequent World 380, due to ping.<br>
          (or 381 if bots are heavy)<br>
          Feel free to add me in-game should you wish!<br><br>
          <br><p></p>
-         <p>
+         <p style="font-family:monospace; letter-spacing:0px; opacity:1.0; font-size:16.5px;">
          -<br>
          LAST UPDATED: Oct 29th 2024 <sup><sub>(been a while? ask me to update this page either in-game or at TheNovimatrem@protonmail.ch)
          </sub></sup><br>-
