--- a/bookmarks/iframe.html
+++ b/bookmarks/iframe.html
@@ -1406,6 +1406,9 @@ background-color:transparent
 
 <span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://bsky.app/" target="_blank">Bluesky</a>
 
+<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://docs.google.com/document/d/10t78KiUEVfgvBEW1yLAO2HLCb4mWmYHu5u6b-jYa-eY/edit?tab=t.0#heading=h.sbd1wpqwluzj" target="_blank">finaltopoly</a>
+
+
 
 
 
@@ -1510,7 +1513,7 @@ background-color:transparent
 
 <br><br>
 <div style="background-color:transparent; display:inline; position:relative; border: 0px solid transparent;">
-|&nbsp;ᵗʰᶦˢ ˢʰᵒᵘˡᵈ ᵇᵉ ᶦᵐᵖᵉʳᶜᵉᵖᵗˡᵇˡᵉ ˢᵒ ᶻᵒᵒᵐ&nbsp;-------------------------------------------------------------------------------------------------------------------------------------|
+|&nbsp;ᵗʰᶦˢ ˢʰᵒᵘˡᵈ ᵇᵉ ᶦᵐᵖᵉʳᶜᵉᵖᵗˡᵇˡᵉ&nbsp;-------------------------------------------------------------------------------------------------------------------------------------|
 </div>
  
 
