--- a/index.html
+++ b/index.html
@@ -260,13 +260,17 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
 <div style="background-color:transparent; padding:5px; margin:5px; border-radius:0px;">
 	 <span style="background-color:transparent; color:white; padding:5px; border-radius: 0px; font-weight:400; text-rendering: optimizeLegibility; text-shadow: 1px 1px 1px rgb(0, 0, 0); font-weight:400">
 
-      <a href="#socialreboot"><img src="./assets/socialreboot_banner_SHORT.png" style="width:auto; height:180px; border:3px solid #181a1b;"></a>
+      <a href="#socialreboot"><img src="./assets/socialreboot_banner_25.png" style="width:auto; height:4%; border:3px solid #181a1b;"></a>
 
     </span></p></div><hr>
 	  <div class="aroundlinks" id="socialreboot"><p></p>
       <sup><span class="newpara" style="vertical-align:top; float:left; line-height:21px; margin-left:20px; float:right;"><br><hr><span style="color:yellow;">new!</span> tons of new and improved socials & such for you to enjoy, from me 💚&nbsp;<br><br><br>
-         <!--NO MORE THAN THAT MUCH, 2 LINES OF THAT LENGTH, IN THIS SHORT DESCRIPTION OR IT BUGS, YES I REALLY MEAN IT.--></span></sup>
-      <!-- ... -->
+         <!--NO MORE THAN THAT MUCH, 2 LINES OF THAT LENGTH, IN THIS SHORT DESCRIPTION OR IT BUGS, YES I REALLY MEAN IT.--></span></sup><hr>
+         <div class="line"></div>
+         <div style="display:inline-block; color:white;">My Links</div>
+         <div class="line"></div>
+         <hr>
+         <!-- ... -->
       <!-- this is a link object -->
       <div class="novinewpleaseleavemealonelinkTWO">
          <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/repos" target="_blank">
@@ -277,16 +281,7 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       <!-- /this was a link object -->
       <!-- /... -->
      
-      <!-- ... -->
-      <!-- this is a link object -->
-      <div class="novinewpleaseleavemealonelinkTWO">
-         <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/snippets" target="_blank">
-         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/images/logo/logo-gitlab-snippets.png">
-         Git (Code Snippets/Notes)
-         </a>
-      </div>
-      <!-- /this was a link object -->
-      <!-- /... -->
+
     <hr>
       <!-- ... -->
       <!-- this is a link object -->
@@ -412,8 +407,30 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       <!-- /this was a link object -->
       <!-- /... -->
       <p></p>
-	  <hr>
-        
+      <hr>
+      <style>
+      .line {
+         width: 53px;
+         height: 0;
+         border: 1px solid #C4C4C4;
+         margin: 3px;
+         display:inline-block;
+       }
+      </style>
+      <div class="line"></div>
+      <div style="display:inline-block; color:white;">Useful Links</div>
+      <div class="line"></div>
+      <hr>
+              <!-- ... -->
+      <!-- this is a link object -->
+      <div class="novinewpleaseleavemealonelinkTWO" style="text-decoration:none; text-decoration-color:transparent;">
+         <a class="novinewpleaseleavemealonelinkTWOhref" href="https://www.pclinuxos.com/?cat=3" target="_blank" style="text-decoration:none; text-decoration-color:transparent;">
+         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-etc.png">
+         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">PCLinuxOS updates <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;">(PCLOS updates)</span></sub></sup></u></b></sub></sup>
+         </a>
+      </div>
+      <!-- /this was a link object -->
+      <!-- /... -->   
 	  
 	  </div>
 <br>
