--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       <div class="novinewpleaseleavemealonelinkTWO">
          <a class="novinewpleaseleavemealonelinkTWOhref" href="https://www.instagram.com/zoeyglobe.she.her/" target="_blank">
          <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-ig.png">
-         Instagram (selfies & more!)
+         ⭐Instagram (selfies & more!)
          </a>
       </div>
       <!-- /this was a link object -->
@@ -368,7 +368,7 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       <div class="novinewpleaseleavemealonelinkTWO">
          <a class="novinewpleaseleavemealonelinkTWOhref" href="https://bsky.app/profile/novimatrem.bsky.social" target="_blank">
          <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-bsky.png">
-         Bluesky
+         ⭐Bluesky
          </a>
       </div>
       <!-- /this was a link object -->
