--- a/bookmarks/iframe.html
+++ b/bookmarks/iframe.html
@@ -1398,15 +1398,15 @@ background-color:transparent
 
 
 
+<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://docs.google.com/document/d/10t78KiUEVfgvBEW1yLAO2HLCb4mWmYHu5u6b-jYa-eY/edit?tab=t.0#heading=h.sbd1wpqwluzj" target="_blank">finaltopoly</a>
 
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://novimatrem.uk/repos" target="_blank">GitLab</a>
 
 
-<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://www.instagram.com/" target="_blank">Instagram</a>
+<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://www.instagram.com/" target="_blank">Instagram⭐</a>
 
-<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://bsky.app/" target="_blank">Bluesky</a>
+<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://bsky.app/" target="_blank">Bluesky⭐</a>
 
-<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://docs.google.com/document/d/10t78KiUEVfgvBEW1yLAO2HLCb4mWmYHu5u6b-jYa-eY/edit?tab=t.0#heading=h.sbd1wpqwluzj" target="_blank">finaltopoly</a>
 
 
 
