--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@ border: 0px solid transparent;
       <!-- navigation -->
       <div class="nav">
          <a class="navitem" style="color:white" href="https://novimatrem.uk">Home</a>
+         <a class="navitem" style="color:white" href="https://novimatrem.uk/pclos-gaming-guide">PCLinuxOS Gaming Guide</a>
+
       </div>
       <!-- /navigation -->
 	   <div class="zoeybadgesholder">
@@ -402,7 +404,20 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       </div>
       <!-- /this was a link object -->
       <!-- /... -->
+       
       <p></p>
+      <hr>
+                   <!-- ... -->
+      <!-- this is a link object -->
+      <div class="novinewpleaseleavemealonelinkTWO" style="text-decoration:none; text-decoration-color:transparent;">
+         <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/pclos-gaming-guide" target="_blank" style="text-decoration:none; text-decoration-color:transparent;">
+         <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-etc.png">
+         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">zoey's PCLinuxOS Gaming Guide <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;">(Steam+MangoHud+FPS cap/limit)</span></sub></sup></u></b></sub></sup>
+         </a>
+      </div>
+      <!-- /this was a link object -->
+      <!-- /... -->   
+	  
       <hr>
       <style>
       .line {
