--- a/pclos-gaming-guide/index.html
+++ b/pclos-gaming-guide/index.html
@@ -116,7 +116,7 @@
       </script>
    </head>
    <br><hr>
-   <body style="background: transparent; background-color:transparent; background-size: cover; text-align: left; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-blend-mode: overlay; background-position: center; background-repeat: no-repeat; background-size: cover; background-size: 100%; width:100%; height:100%; background: url(https://novimatrem.uk/pclos-gaming-guide/blurmapscape.png) no-repeat; background-size: 100% 273%; background-color: #0e63f8; backdrop-filter: blur(200px); padding:0px; margin:0px; margin-top:-128px; padding-bottom:190.5%; image-rendering:pixelated;  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7); rgb(96, 96, 96); background-blend-mode: darken;">
+   <body style="background: transparent; background-color:transparent; background-size: cover; text-align: left; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-blend-mode: overlay; background-position: center; background-repeat: no-repeat; background-size: cover; background-size: 100%; width:100%; height:100%; background: url(https://novimatrem.uk/pclos-gaming-guide/blurmapscape.png) no-repeat; background-size: 100% 273%; background-color: transparent; backdrop-filter: blur(200px); padding:0px; margin:0px; margin-top:-128px; padding-bottom:190.5%; image-rendering:pixelated;  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7); rgb(96, 96, 96); background-blend-mode: darken;">
       <p class="versionnum"></p>
       <!-- Thank you simonwhitaker for this fork ribbon -->
       <div class="holdernyaihavedonenothingwrongONE" style="background-color: black; border: 2px solid black;">
