--- a/pclos-gaming-guide/index.html
+++ b/pclos-gaming-guide/index.html
@@ -170,7 +170,7 @@
          <br><p></p>
          <p>
          <br>
-         Dec 16th 2024<br><span style="color:transparent">-</span><br>
+         v13, Dec 16th 2024<br><span style="color:transparent">-</span><br>
          
          This advanced guide goes over installing Steam and MangoHud on PCLinuxOS, and using it to cap/limit the FPS of Steam games. My graphics card gets quite hot, so this is essential for me.<br><span style="color:transparent">-</span>
       
@@ -217,7 +217,7 @@
   <pre style="color:#00ff00"># Your user account needs to be in the sudoers file for this to work.
 # How to do so is outside of the scope of this guide, but is easy to Google for.
 
-      sudo ./mangohud-setup.sh install</pre>
+      ./mangohud-setup.sh install</pre>
   <p>
    and MangoHud is installed!</p>
 
