fix footer spacing chrome

--- a/pclos-gaming-guide/index.html
+++ b/pclos-gaming-guide/index.html
@@ -256,7 +256,7 @@
          <footer>
             <div class="footer">
 			<br><br>
-               <p style="margin-top:32px;">Page requires JavaScript, sorry-- <sub><sup><b>it should be accessible, works in a lot of (even text-mode) browsers.</b></sub></sup><br>
+               <hr><p style="margin-top:32px;">Page requires JavaScript, sorry-- <sub><sup><b>it should be accessible, works in a lot of (even text-mode) browsers.</b></sub></sup><br>
                   Design somewhat inspired by 
                   <a href="https://web.archive.org/web/20210509043827/http://thebestmotherfucking.website/" style="color:#0e63f8" class="footer" target="_blank">thebestmother<i class="censor">fuck</i>ing.website</a>
                   and <a href="https://yukiisbo.red/" style="color:#0e63f8" class="footer" target="_blank">yukiisbo.red</a> -- thanks!
