--- a/bookmarks/iframe.html
+++ b/bookmarks/iframe.html
@@ -1401,13 +1401,13 @@ background-color:transparent
 <span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;">[YT + PC]</a>
 
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            <span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://novimatrem.uk/repos" target="_blank">GitLab</a>
+<span style="background-color:red; padding:5px; margin:5px; border:2px solid red; vertical-align:middle;">(Unsafe<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle; top:-8px; border:3px solid red;" href="https://www.instagram.com/zoeyglobe.she.her/p/DD7WNqeN2w_/" target="_blank">&nbsp;IG&nbsp;⬇️&nbsp;&nbsp;</a>
 
+<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle; top:-8px; border:3px solid red;" href="https://bsky.app/profile/novimatrem.bsky.social/post/3ldycmzxals2y" target="_blank">&nbsp;BS1&nbsp;⬇️&nbsp;&nbsp;</a>
 
-<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://www.instagram.com/" target="_blank">Instagram⭐</a>
+<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle; top:-8px; border:3px solid red;" href="https://bsky.app/profile/novimatrem.bsky.social/post/3ldyecchrfk2i" target="_blank">&nbsp;BS2&nbsp;⬇️&nbsp;&nbsp;</a>
 
-<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle;" href="https://bsky.app/" target="_blank">Bluesky⭐</a>
-
-
+<span style="color:white"></span> <a class="blogpitchurl" id="bmk" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:white; vertical-align:middle; top:-8px; border:3px solid red;" href="https://www.facebook.com/permalink.php?story_fbid=pfbid0pTaTuTbASQTCkVnTsDSz8xZ12FT2zKU5EMknDV1umRDxaLEb6XzLngTCPVKbwQFcl&id=61556766620752&rdid=o72hV6yF0v3ewNDA" target="_blank">&nbsp;FB&nbsp;⬇️&nbsp;&nbsp;</a>)</span>
 
 
 
@@ -1512,7 +1512,7 @@ background-color:transparent
 
 
 <br><br>
-<div style="background-color:transparent; display:inline; position:relative; border: 0px solid transparent;">
+<div style="background-color:transparent; display:inline; position:relative; border: 0px solid transparent; color:black;">
 |&nbsp;ᵗʰᶦˢ ˢʰᵒᵘˡᵈ ᵇᵉ ᶦᵐᵖᵉʳᶜᵉᵖᵗˡᵇˡᵉ&nbsp;-------------------------------------------------------------------------------------------------------------------------------------|
 </div>
  
