update faves global

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       <div class="novinewpleaseleavemealonelinkTWO">
          <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/videos" target="_blank">
          <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-youtube.png">
-         Videos
+         ⭐YouTube
          </a>
       </div>
       <!-- /this was a link object -->
@@ -312,7 +312,7 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       <div class="novinewpleaseleavemealonelinkTWO">
          <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/pinterest" target="_blank">
          <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/images/logo/logo-pinterest.png">
-         Pinterest
+         ⭐Pinterest
          </a>
       </div>
       <!-- /this was a link object -->
