--- a/index.html
+++ b/index.html
@@ -419,10 +419,10 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
               <!-- ... -->
       <!-- this is a link object -->
       <div class="novinewpleaseleavemealonelinkTWO" style="text-decoration:none; text-decoration-color:transparent;">
-         <a class="novinewpleaseleavemealonelinkTWOhref" href="https://www.pclinuxos.com/?cat=3" target="_blank" style="text-decoration:none; text-decoration-color:transparent;">
+         <span class="novinewpleaseleavemealonelinkTWOhref" style="text-decoration:none; text-decoration-color:transparent;">
          <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-etc.png">
-         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">PCLinuxOS updates <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;">(PCLOS updates)</span></sub></sup></u></b></sub></sup>
-         </a>
+         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">coming soon <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;">(work in progress))</span></sub></sup></u></b></sub></sup>
+         </span>
       </div>
       <!-- /this was a link object -->
       <!-- /... -->   
