--- a/index.html
+++ b/index.html
@@ -413,21 +413,22 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
        }
       </style>
       <div class="line"></div>
-      <div style="display:inline-block; color:white;">Useful Links</div>
+      <div style="display:inline-block; color:white;">Contact Me</div>
       <div class="line"></div>
       <hr>
-              <!-- ... -->
+
+      <a class="novinewpleaseleavemealonelinkTWOhref" href="https://web.archive.org/web/20240814091051if_/https://www.justuseemail.com/#close" target="_blank">        <!-- ... -->
       <!-- this is a link object -->
       <div class="novinewpleaseleavemealonelinkTWO" style="text-decoration:none; text-decoration-color:transparent;">
          <span class="novinewpleaseleavemealonelinkTWOhref" style="text-decoration:none; text-decoration-color:transparent;">
          <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-etc.png">
-         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">coming soon <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;">(work in progress)</span></sub></sup></u></b></sub></sup>
+         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">Just Use Email <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;">(archive.org bc server issues)</span></sub></sup></u></b></sub></sup>
          </span>
       </div>
       <!-- /this was a link object -->
       <!-- /... -->   
-	  
-	  </div>
+	  </a>
+<input type="text" value="TheNovimatrem@protonmail.ch" class="field left" readonly="" style="width:240px; font-weight:600; color:white; vertical-align:middle; margin-top:8px">	  </div>
 <br>
 <hr>
 	  <p class="newbottext"><span style=""><sup><span style="font-size:12px; letter-spacing:-0.0px; line-height:16px"><sup>▲&nbsp;</sup>Note: My online profiles and such are littered with harassment towards me, they're trying to mess up the place, ignore 'em<br>Don't feed the trolls. They aim to spread upset, and they fail to manage that, so just give them no attention & they get bored</span></sup></span><br></p>&nbsp;
@@ -439,7 +440,7 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
 	 </p>
 	 </p>
 	<p class="newbottext">
-	Feel free to e-mail me with thoughts, feedback, anything at TheNovimatrem@protonmail.ch -<br>we're so back!
+	Feel free to e-mail me with thoughts, feedback, anything at <b><input type="text" value="TheNovimatrem@protonmail.ch" class="field left" readonly="" style="width:235px; font-weight:900;"></b>&nbsp;-<br>we're so back!
 		 </p><br><hr>
 
         <!-- this is a link object -->
