--- a/bookmarks/iframe.html
+++ b/bookmarks/iframe.html
@@ -1366,8 +1366,8 @@ background-color:transparent
 <span class="pythonlearn"> <div class="card" style="border: 4px solid white; width: 99% max-width: 99%; min-width: 99%; padding:24px; padding-bottom:0px; color:white; background-color:black;"><sup><sup><sub><p class="blogpitchurl" style="background-color:#800080; color:white; padding:5px; margin:5px; border-radius:0px;">&nbsp;⭐&nbsp;</p></sub></sub></sup>
 
 
-            <a class="" id="" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:transparent; background-color:black; color:white; vertical-align:sub;" href="https://mail.protonmail.com/login" target="_blank">ProtonMail</a>  
-                        <a class="" id="" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:transparent; background-color:black; color:white; vertical-align:sub;" href="https://www.smashwords.com" target="_blank">Smashwords</a>  
+            <a class="" id="" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:transparent; background-color:black; color:white; vertical-align:sub;" href="https://mail.protonmail.com/login" target="_blank">ProtonM</a>  
+                        <a class="" id="" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:transparent; background-color:black; color:white; vertical-align:sub;" href="http://www.palemoon.org/releasenotes.shtml" target="_blank">PaleMoon updates</a>  
 
             
          
