fix bmks for palemoon

--- a/bookmarks/iframe.html
+++ b/bookmarks/iframe.html
@@ -135,6 +135,7 @@ html {
   user-select: none;
   filter: contrast(120%);
   background-color:black;
+  transform: translate(175%, 175%) scale(4.5);
 }
 
 }
@@ -1367,7 +1368,7 @@ background-color:transparent
 
 
             <a class="" id="" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:transparent; background-color:black; color:white; vertical-align:sub;" href="https://mail.protonmail.com/login" target="_blank">ProtonM</a>  
-                        <a class="" id="" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:transparent; background-color:black; color:white; vertical-align:sub;" href="http://www.palemoon.org/releasenotes.shtml" target="_blank">PaleMoon updates</a>  
+                        <a class="" id="" style="white-space: normal; display:inline; position:relative; border: 4px solid transparent; color:transparent; background-color:black; color:white; vertical-align:sub;" href="http://www.palemoon.org/releasenotes.shtml" target="_blank">PaleMoon</a>  
 
             
          
