--- a/bookmarks/index.html
+++ b/bookmarks/index.html
@@ -16,6 +16,7 @@
             width:1400px;
             height:1000px;
             background-color:black;
+            transform: translate(175%, 175%) scale(4.5);
         }
           
         html,
