--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       <div class="novinewpleaseleavemealonelinkTWO">
          <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/pinterest" target="_blank">
          <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/images/logo/logo-pinterest.png">
-         ⭐Pinterest
+         Pinterest
          </a>
       </div>
       <!-- /this was a link object -->
