--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
       <!-- /this was a link object -->
       <!-- /... -->   
 	  </a>
-<input type="text" value="TheNovimatrem@protonmail.ch" class="field left" readonly="" style="width:245px; font-weight:600; color:white; vertical-align:middle; margin-top:8px">	  </div>
+<input type="text" value="TheNovimatrem@protonmail.ch" class="field left" readonly="" style="width:245px; font-weight:600; color:black; vertical-align:middle; margin-top:8px">	  </div>
       <hr>      <style>
       .line {
          width: 53px;
