adjust legacy pages

--- a/minetest-private/index.html
+++ b/minetest-private/index.html
@@ -50,53 +50,7 @@
       <a class="github-fork-ribbon left-top" href="https://gitlab.com/users/Novimatrem/projects" target="_blank" data-ribbon="Fork me on GitLab" alt="Fork me on GitLab" title="Fork me on GitLab">Fork me on GitLab</a>
       <div class="holdernyaihavedonenothingwrongONE">
       <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://www.kernel.org/linux.html">
-            <img class="badge" src="../assets/images/badge/badge-linux.png" alt="Linux rocks! User since Mid-2015" title="Linux rocks! User since Mid-2015">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://www.urbandictionary.com/define.php?term=trans%2A">
-            <img class="badge" src="../assets/images/badge/badge-trans.png" alt="Trans pride! - out & proud since May 1st 2016" title="Trans pride! - out & proud since May 1st 2016">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/Pansexuality">
-            <img class="badge" src="../assets/images/badge/badge-pan.png" alt="Pansexual pride!" title="Pansexual pride!">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/Polyamory">
-            <img class="badge" src="../assets/images/badge/badge-poly.png" alt="Polyamory pride!" title="Polyamory pride!">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/Trans_woman">
-            <img class="badge" src="../assets/images/badge/badge-transwoman.png" alt="Trans girl ♀ - out & proud since May 1st 2016" title="Trans girl ♀ - out & proud since May 1st 2016">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/LGBTQIA+">
-            <img class="badge" src="../assets/images/badge/badge-lgbtqia_plus.png" alt="LGBTQIA+ pride!" title="LGBTQIA+ pride!">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://www.dictionary.com/browse/pacifist">
-            <img class="badge" src="../assets/images/badge/badge-peaceful_pacifist.png" alt="Peaceful pacifist" title="Peaceful pacifist">
-            </a>
-         </div>
+
       </div>
       <!-- navigation -->
       <div class="nav">
@@ -156,28 +110,28 @@ Rules:<br>
       <div class="novinewpleaseleavemealonelinkTWO">
          <span class="novinewpleaseleavemealonelinkTWOhref" href="" target="_top" style="color:white; opacity:1;" alt="The address of the server is 139.59.11.172 - it is at the default Minetest port 30000" title="The address of the server is 139.59.11.172 - it is at the default Minetest port 30000">
          <img class="novinewpleaseleavemealonelinkTWOimage" src="../assets/images/logo/logo-minetestnet.png">
-         139.59.11.172 (highlight and copy)
+         Server no longer available, sorry!&nbsp;
          </span>
       </div>
       <br>
       <!-- /this was a link object -->
       <!-- /... -->
-      <h3>The game itself;</h3>
+      <h3>
       <!-- ... -->
-      <div id="bubblelinks">
+      <div id="bubblelinks"></h3>
          <!-- this is a BUBBLE TYPE link object -->
-         <div class="novinewpleaseleavemealonelinkTWO">
+         <div class="novinewpleaseleavemealonelinkTWO" style="height:62px;">
             <a class="novinewpleaseleavemealonelinkTWOhref" href="https://www.minetest.net/" target="_blank">
             <img id="bubblelinks" class="novinewpleaseleavemealonelinkTWOimage" src="../assets/images/logo/logo-minetestnet.png">
-            Minetest.net
+            The game itself at Minetest.net
             </a>
-         </div>
+         </div></div>
          <!-- /this was a BUBBLE TYPE link object -->
          <!-- /... -->
          <!-- ... -->
          <div id="bubblelinks">
          </div>
-        
+        <center>
          <footer>
             <div class="footer">
                <p>Page requires JavaScript, sorry-- <sub><sup><b>it should be accessible, works in a lot of (even text-mode) browsers.</b></sub></sup><br>
@@ -197,6 +151,7 @@ Rules:<br>
                document.getElementById("year").innerHTML = new Date().getFullYear();
             </script>
          </footer>
+		 </center>
       </div>
    </body>
 </html>
