--- a/invites/trackmania/fEaXp4B9/index.html
+++ b/invites/trackmania/fEaXp4B9/index.html
@@ -44,52 +44,13 @@
       <a class="github-fork-ribbon left-top" href="https://gitlab.com/users/Novimatrem/projects" target="_blank" data-ribbon="Fork me on GitLab" alt="Fork me on GitLab" title="Fork me on GitLab">Fork me on GitLab</a>
       <div class="holdernyaihavedonenothingwrongONE">
       <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://www.kernel.org/linux.html">
-            <img class="badge" src="../../../assets/images/badge/badge-linux.png" alt="Linux rocks! User since Mid-2015" title="Linux rocks! User since Mid-2015">
-            </a>
-         </div>
+        
       </div>
+
+
       <div class="badgesholder">
          <div class="badge">
-            <a target="_blank" href="https://www.urbandictionary.com/define.php?term=trans%2A">
-            <img class="badge" src="../../../assets/images/badge/badge-trans.png" alt="Trans pride! - out & proud since May 1st 2016" title="Trans pride! - out & proud since May 1st 2016">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/Pansexuality">
-            <img class="badge" src="../../../assets/images/badge/badge-pan.png" alt="Pansexual pride!" title="Pansexual pride!">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/Polyamory">
-            <img class="badge" src="../../../assets/images/badge/badge-poly.png" alt="Polyamory pride!" title="Polyamory pride!">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/Trans_woman">
-            <img class="badge" src="../../../assets/images/badge/badge-transwoman.png" alt="Trans girl ♀ - out & proud since May 1st 2016" title="Trans girl ♀ - out & proud since May 1st 2016">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://en.wikipedia.org/wiki/LGBTQIA+">
-            <img class="badge" src="../../../assets/images/badge/badge-lgbtqia_plus.png" alt="LGBTQIA+ pride!" title="LGBTQIA+ pride!">
-            </a>
-         </div>
-      </div>
-      <div class="badgesholder">
-         <div class="badge">
-            <a target="_blank" href="https://www.dictionary.com/browse/pacifist">
-            <img class="badge" src="../../../assets/images/badge/badge-peaceful_pacifist.png" alt="Peaceful pacifist" title="Peaceful pacifist">
-            </a>
+ 
          </div>
       </div>
       <!-- navigation -->
@@ -116,7 +77,7 @@ To be able to play and compare your scores with <strong><a target="_blank" rel="
       <tbody><tr>
         <td width="337"><span data-proton-remote="remote-15"><span style="width:337px;height:121px"><span><span></span></span></span></span></td>
         <td data-darkreader-inline-bgcolor="" style="--darkreader-inline-bgcolor: #000000;" bgcolor="#000000"><p><font data-darkreader-inline-color="" style="--darkreader-inline-color: #e8e6e3; letter-spacing:-1px;" size="2" face="Verdana, Arial, Helvetica, sans-serif" color="#FFFFFF">Looking forward to seeing you online!</font></p>
-          <p><font data-darkreader-inline-color="" style="--darkreader-inline-color: #ffd11a; letter-spacing:-1px;" size="2" face="Verdana, Arial, Helvetica, sans-serif" color="#FFCC00"><strong>The TrackMania Team</strong></font></p></td></tr></tbody></table></td></tr></tbody></table><div style="font-family:Arial, sans-serif"></div><div><span style="font-family:Arial, sans-serif;line-height:normal">​</span><br></div><blockquote data-darkreader-inline-color="" data-darkreader-inline-border-bottom="" data-darkreader-inline-border-right="" data-darkreader-inline-border-top="" data-darkreader-inline-border-left="" style="border-color: rgb(200, 200, 200); border-left: 3px solid rgb(200, 200, 200); padding-left: 10px; color: rgb(102, 102, 102); --darkreader-inline-border-top: #404547; --darkreader-inline-border-right: #404547; --darkreader-inline-border-bottom: #404547; --darkreader-inline-border-left: #404547; --darkreader-inline-color: #a8a095;"><div>Hello-
+          <p><font data-darkreader-inline-color="" style="--darkreader-inline-color: #ffd11a; letter-spacing:-1px;" size="2" face="Verdana, Arial, Helvetica, sans-serif" color="#FFCC00"><strong>The TrackMania Team</strong></font></p></td></tr></tbody></table></td></tr></tbody></table><div style="font-family:Arial, sans-serif"></div><div><span style="font-family:Arial, sans-serif;line-height:normal">​</span><br></div><blockquote data-darkreader-inline-color="" data-darkreader-inline-border-bottom="" data-darkreader-inline-border-right="" data-darkreader-inline-border-top="" data-darkreader-inline-border-left="" style="border-color: rgb(200, 200, 200); border-left: 3px solid rgb(200, 200, 200); padding-left: 10px; color: rgb(102, 102, 102); --darkreader-inline-border-top: #404547; --darkreader-inline-border-right: #404547; --darkreader-inline-border-bottom: #404547; --darkreader-inline-border-left: #404547; --darkreader-inline-color: #a8a095; color:white;"><div>Hello-
  it's zoey, if you want to play this with me, you can get it for free, as TrackMania Nations Forever.<br>You can get it for free on Steam, if you're okay with using Steam, so you don't have to deal with their confusing website, but the Steam version may have a bug where the texture quality is forced to very low..</div><div>Regardless of how you get it, feel free to add me in game via my email address, thenovimatrem@protonmail.ch - or maybe it wants my username (login), novimatrem</div></blockquote><div><span style="font-family:Arial, sans-serif;line-height:normal">​</span></div><div><span style="font-family:Arial, sans-serif;line-height:normal">
 &nbsp;<br>&nbsp;<br></span></div><div><span style="font-family:Arial, sans-serif;line-height:normal">&nbsp;<br></span></div><div><span style="font-family:Arial, sans-serif;line-height:normal">&nbsp;<a href="https://novimatrem.uk" rel="noreferrer nofollow noopener" target="_blank">https://novimatrem.uk</a><br></span></div><span><span style="font-family:Arial, sans-serif;line-height:normal"><br></span></span>
       </p>
@@ -125,7 +86,8 @@ To be able to play and compare your scores with <strong><a target="_blank" rel="
 <center style="margin-top:-64px;">
          <footer>
             <div class="footer">
-			<br><br>
+			<br><br><br><br>
+			<p></p><p></p><p></p>
                <p style="margin-top:32px;">Page requires JavaScript, sorry-- <sub><sup><b>it should be accessible, works in a lot of (even text-mode) browsers.</b></sub></sup><br>
                   Design somewhat inspired by 
                   <a href="https://web.archive.org/web/20210509043827/http://thebestmotherfucking.website/" class="footer" target="_blank">thebestmother<i class="censor">fuck</i>ing.website</a>
