--- a/index.html
+++ b/index.html
@@ -253,15 +253,20 @@ hr {
 I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I give my absolute all into being good, kind, and sweet- and think I manage it quite well.<br>
 <!--NO MORE THAN THAT MUCH, 2 LINES OF THAT LENGTH, IN THIS SHORT DESCRIPTION OR IT BUGS, YES I REALLY MEAN IT.--></span></sup>
       </p>
+	  
 
       <p><b><hr>
+
 
 </b></p><br><br>
 <hr>
 <p>
 <div style="background-color:transparent; padding:5px; margin:5px; border-radius:0px;">
 	 <span style="background-color:transparent; color:white; padding:5px; border-radius: 0px; font-weight:400; text-rendering: optimizeLegibility; text-shadow: 1px 1px 1px rgb(0, 0, 0); font-weight:400">
-<br>
+<br><sup><p></p><p></p><span class="newpara" style="vertical-align:top; float:left; line-height:21px; margin-left:20px; background-color:#181a1b; padding:5px; border-radius:16px; visibility:hidden;">Do you need a cheap and affordable basic static HTML+CSS website, just like this one?<br>One unlike typical one-pager solutions, with as many pages as you'd like? Happy to help!&nbsp;&nbsp;<br>
+Fill in the Google Form linked below and I'll respond to you as soon as possible via email:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/4DQjGtZucndGwUfp9" target="_blank" style="color:#ff7eb7;">https://forms.gle/4DQjGtZucndGwUfp9</a><br>
+<!--NO MORE THAN THAT MUCH, 2 LINES OF THAT LENGTH, IN THIS SHORT DESCRIPTION OR IT BUGS, YES I REALLY MEAN IT.--></span></sup>
+      </p><hr><hr><p></p><p></p><p></p><p></p><p></p><p></p>
       <a href="#socialreboot"><img src="./assets/socialreboot_banner_25.png" style="width:auto; height:4%; border:3px solid #181a1b;"></a>
 
     </span></p></div><hr>
