--- a/index.html
+++ b/index.html
@@ -264,9 +264,9 @@ I'm a little empty-headed, sometimes, but I mean well- and I try my best.<br>I g
 <div style="background-color:transparent; padding:5px; margin:5px; border-radius:0px;">
 	 <span style="background-color:transparent; color:white; padding:5px; border-radius: 0px; font-weight:400; text-rendering: optimizeLegibility; text-shadow: 1px 1px 1px rgb(0, 0, 0); font-weight:400">
 <br><sup><p></p><p></p><span class="newpara" style="vertical-align:top; float:left; line-height:21px; margin-left:20px; background-color:#181a1b; padding:5px; border-radius:16px;">Do you need a cheap and affordable basic static HTML+CSS website, just like this one?<br>One unlike typical one-pager solutions, with as many pages as you'd like? Happy to help!&nbsp;&nbsp;<br>
-Fill in the Google Form linked below and I'll respond to you as soon as possible via email:<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://forms.gle/4DQjGtZucndGwUfp9" target="_blank" style="color:#ff7eb7;">https://forms.gle/4DQjGtZucndGwUfp9</a><br>
+Fill in the Google Form linked below and I'll respond to you as soon as possible via email:<br><a href="https://forms.gle/4DQjGtZucndGwUfp9" target="_blank" style="color:#ff7eb7;">https://forms.gle/4DQjGtZucndGwUfp9</a><br>
 <!--NO MORE THAN THAT MUCH, 2 LINES OF THAT LENGTH, IN THIS SHORT DESCRIPTION OR IT BUGS, YES I REALLY MEAN IT.--></span></sup>
-      </p><hr><hr><p></p><p></p><p></p><p></p><p></p><p></p>
+      </p><hr><hr><p></p><p></p><p></p><p></p><p></p><p></p><p></p>
       <a href="#socialreboot"><img src="./assets/socialreboot_banner_25.png" style="width:auto; height:4%; border:3px solid #181a1b;"></a>
 
     </span></p></div><hr>
@@ -401,7 +401,7 @@ Fill in the Google Form linked below and I'll respond to you as soon as possible
       <div class="novinewpleaseleavemealonelinkTWO" style="text-decoration:none; text-decoration-color:transparent;">
          <a class="novinewpleaseleavemealonelinkTWOhref" href="https://novimatrem.uk/pclos-gaming-guide" target="_blank" style="text-decoration:none; text-decoration-color:transparent;">
          <img class="novinewpleaseleavemealonelinkTWOimage" src="./assets/logo-etc.png">
-         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">zoey's PCLinuxOS Gaming Guide <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;">(Steam+MangoHud+FPS cap/limit)</span></sub></sup></u></b></sub></sup>
+         <sup><sub><b style="font-weight:700; letter-spacing:-0px; font-size:15px; color: #ff7eb7; text-rendering:optimizeLegibility; text-decoration:none; text-decoration-color:transparent;"><u style="text-decoration:none; text-decoration-color:transparent;">zoey's PCLinuxOS Gaming Guide <sup><sub><span style="color:pink; font-size:10px; vertical-align: middle;"></span></sub></sup></u></b></sub></sup>
          </a>
       </div>
       <!-- /this was a link object -->
